# self-llm

./: .gitignore  pyproject.toml
src/self_llm/: __init__.py  engine.py  model.py  object.py  utils.py
