[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "self-llm"
version = "0.0.2"
authors = [
  { name="Taeho Lee", email="adldotori@gmail.com" },
]
description = "A package for using self-served LLM"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/corca-ai/self-llm"
"Bug Tracker" = "https://github.com/corca-ai/self-llm/issues"